# investment-tracker

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .merge-log.md  .tmp_commit_msg  .tool-versions  CLAUDE_DESIGN_HANDOFF.md  CODE_TEAM_BOOTSTRAP.md  CONTRIBUTING.md  LICENSE  README.md  biome.json  commitlint.config.mjs  docker-compose.yml  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.base.json  turbo.json
.github/: dependabot.yml  pull_request_template.md
apps/ai/: .dockerignore  .env.example  Dockerfile  README.md  fly.staging.toml  fly.toml  package.json  pyproject.toml  secrets.keys.yaml
apps/ai/scripts/: with-uv.sh
apps/ai/src/ai_service/: __init__.py  config.py  http_headers.py  logging_setup.py  main.py  models.py  observability.py
apps/ai/src/ai_service/agents/: __init__.py  behavioral_coach.py  chat_agent.py  explainer.py  insight_generator.py
apps/ai/src/ai_service/api/: __init__.py  auth.py  behavioral.py  chat.py  deps.py  explain.py  insights.py  middleware.py
apps/ai/src/ai_service/clients/: __init__.py  core_api.py
apps/ai/src/ai_service/llm/: __init__.py  client.py  pricing.py  prompts.py  streaming.py
apps/ai/src/ai_service/tools/: __init__.py  market.py  portfolio.py  registry.py
apps/ai/tests/: conftest.py  test_auth.py  test_chat_endpoint.py  test_explain_endpoint.py  test_health.py  test_insight_rules.py  test_insights_endpoint.py  test_pricing.py  test_streaming.py  test_tools_registry.py
claude_design/: PROMPT.md  README.md
docs/: 00_PROJECT_BRIEF.md  01_TECH_STACK.md  02_ARCHITECTURE.md  03_ROADMAP.md  04_DESIGN_BRIEF.md  ADR-2026-04-29-plugin-architecture.md  BACKEND_HEALTH_2026-04-21.md  CC_KICKOFF_ai_staging_deploy.md  CC_KICKOFF_api_cors.md  CC_KICKOFF_option4_coach_adr.md  CC_KICKOFF_option4_feasibility.md  CC_KICKOFF_pr_c.md  CC_KICKOFF_task07_slice1.md  CC_KICKOFF_task07_slice2.md  CC_KICKOFF_task07_slice3.md  CC_KICKOFF_task07_slice4a.md  CC_KICKOFF_task07_slice6a.md  CC_KICKOFF_web_root_redirect.md  CLAUDE_CODE_PROMPTS.md  DECISIONS.md  ENV.md  PENDING_CLEANUPS.md  PO_HANDOFF.md  PR_C_preflight.md  README.md  RUNBOOK_ai_flip.md  RUNBOOK_ai_staging_deploy.md  RUNBOOK_deploy.md  RUNBOOK_provedo_landing_staging.md  TASK_01_monorepo_setup.md  TASK_02_design_system.md  TASK_03_api_contract.md  TASK_04_core_backend.md  TASK_05_ai_service.md  TASK_06_broker_integrations.md  TASK_07_web_frontend.md  TASK_08_ios_app.md  TECH_DEBT.md  UI_BACKLOG.md  merge-log.md
ops/: secrets.keys.yaml
(+989 files in other folders)
