[project]
name = "ai-service"
version = "0.0.0"
description = "AI service for investment-tracker — LLM layer (FastAPI + Pydantic + Anthropic SDK)."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Ruslan Maistrenko", email = "rmaistrenko.job@gmail.com" }]
license = { text = "MIT" }

# Runtime deps.
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "httpx>=0.28",
  "structlog>=24.4",
  "python-json-logger>=2.0",
  "anthropic>=0.40",
  "sentry-sdk[fastapi]>=2.18",
  "posthog>=3.7",
]

[project.optional-dependencies]
# Reserved for future RAG work (pgvector embeddings). Not used on MVP.
db = [
  "asyncpg>=0.30",
  "pgvector>=0.3",
]

[dependency-groups]
dev = [
  "ruff>=0.8",
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.28",
]

[project.scripts]
ai-service = "ai_service.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_service"]

# -----------------------------------------------------------------------------
# Tooling
# -----------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "W",     # pycodestyle / pyflakes
  "I",               # isort
  "UP",              # pyupgrade
  "B",               # bugbear
  "SIM",             # simplify
  "N",               # naming
  "RET",             # return
  "C4",              # comprehensions
  "ASYNC",           # async correctness
  "S",               # security (bandit-lite)
  "T20",             # no print
]
ignore = [
  "E501",            # line-length handled by formatter
  "S101",            # allow assert in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "T20"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
warn_unreachable = true
show_error_codes = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
files = ["src"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q --strict-markers"
